# static-library

./: .gitignore  Makefile.example  README.md  README.txt
Get-time/: CMakeLists.txt
Get-time/code/src/: get-time.cpp
Get-time/tools/: configure.ps1
MathLib-project/: CMakeLists.txt
MathLib-project/code/MathFuncsLib/: MathFuncsLib.cpp
MathLib-project/code/include/: MathFuncsLib.h  temperature.h
MathLib-project/code/src/: main.cpp  temperature.cpp
MathLib-project/tools/: build.ps1  configure.ps1  run.ps1
